--- a/css/main.css
+++ b/css/main.css
@@ -4,17 +4,20 @@
 }
 */
 
+/*
 .header{
       height: 80vh;
 
 }
+*/
 
 
 .rounded-circle{
-    height: 10vh;
-    width: 10vh;
+    
+/*
     margin-top: 10vh;
     margin-left: auto;
+*/
     
     
 }
