--- a/css/custom.css
+++ b/css/custom.css
@@ -45,7 +45,17 @@
 
 
 .container {
-  padding-right: 10px;
-  padding-left: 10px;
   
+    width: 80%;
+    
+  
+}
+
+
+
+
+@media (max-width: 576px) {
+   .container {
+       width:100%;
+   }
 }
